# ProtoBuf

./: .gitignore  README.md
fast_start/: CMakeLists.txt  contact.pb.cc  contact.pb.h  contact.proto  main.cc
install/protobuf-3.21.1/: Makefile  config.h  config.status  libtool  protobuf-lite.pc  protobuf.pc
install/protobuf-3.21.1/benchmarks/: Makefile
install/protobuf-3.21.1/conformance/: Makefile
install/protobuf-3.21.1/src/: Makefile  no_warning_test.cc  protoc  test_plugin  zcgunzip  zcgzip
install/protobuf-3.21.1/src/.deps/: no_warning_test-no_warning_test.Po
install/protobuf-3.21.1/src/.libs/: protoc  test_plugin  zcgunzip  zcgzip
install/protobuf-3.21.1/src/google/protobuf/.deps/: any.Plo  any.pb.Plo  any_lite.Plo  api.pb.Plo  arena.Plo  arenastring.Plo  arenaz_sampler.Plo  descriptor.Plo  descriptor.pb.Plo  descriptor_database.Plo  duration.pb.Plo  dynamic_message.Plo  empty.pb.Plo  extension_set.Plo  extension_set_heavy.Plo  field_mask.pb.Plo  generated_enum_util.Plo  generated_message_bases.Plo  generated_message_reflection.Plo  generated_message_tctable_full.Plo  generated_message_tctable_lite.Plo  generated_message_util.Plo  implicit_weak_message.Plo  inlined_string_field.Plo  map.Plo  map_field.Plo  message.Plo  message_lite.Plo  no_warning_test-any_test.pb.Po  no_warning_test-map_lite_unittest.pb.Po  (+164 more)
proto3/: contacts.pb.cc  contacts.pb.h  contacts.proto  main  main.cc  makefile
types/client/: contact.pb.cc  contact.pb.h  contact.proto  main  main.cc
types/server/: contact.pb.cc  contact.pb.h  contact.proto  main  main.cc  makefile
(+230 files in other folders)
